Fix: Added rule for container-fluid to get rid of white space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,12 +46,18 @@
     font-weight: 700;
 }
 
+.container-fluid {
+    padding: 0;
+    margin: 0;
+}
+
 /*--------------------------------------------Footer*/
 
 footer {
     background-color: #50256e;
     color: #fff;
     min-height: 120px;
+    width: 100%;
 }
 
 .social-links {
